SUBDIRS = src/navigation src/base src/datasources src/gauges src/main
EXTRA_DIST = doc fonts inidata
pkgdata_DATA = \
inidata/wxr.ini \
inidata/default.ini \
fonts/CockpitMCDU.ttf \
fonts/CockpitScreens.ttf \
fonts/CockpitFonts_Licence.txt \
fonts/Vera.ttf \
fonts/Vera_Copyright.txt \
fonts/digital.ttf
