# Library name
noinst_LIBRARIES = libRadarBase.a

# Source file names
libRadarBase_a_SOURCES = \
CircleEvaluator.cpp \
FLTKRenderWindow.cpp \
Font.cpp \
FontManager.cpp \
Gauge.cpp \
GaugeComponent.cpp \
Object.cpp \
OrderedPair.cpp \
RenderObject.cpp \
RenderWindow.cpp \
../libxpcockpit/check_aircraft.c \
../libxpcockpit/dictionary.c \
../libxpcockpit/handleserver.c \
../libxpcockpit/iniparser.c \
../libxpcockpit/serverdata.c \
../libxpcockpit/wxrdata.c \
../libxpcockpit/xplanebeacon.c \
../libxpcockpit/xplanewxr.c

noinst_HEADERS = \
CircleEvaluator.h \
FLTKRenderWindow.h \
Font.h \
FontManager.h \
GLHeaders.h \
Gauge.h \
GaugeComponent.h \
Messages.h \
Object.h \
OrderedPair.h \
RenderObject.h \
RenderWindow.h
