# Library name
noinst_LIBRARIES = libRadarBase.a
AM_CPPFLAGS += -I$(top_srcdir)/libxpcockpit

# Source file names
libRadarBase_a_SOURCES = \
CircleEvaluator.cpp \
FLTKRenderWindow.cpp \
Font.cpp \
FontManager.cpp \
Gauge.cpp \
GaugeComponent.cpp \
Object.cpp \
OrderedPair.cpp \
RenderObject.cpp \
RenderWindow.cpp \
$(top_srcdir)/libxpcockpit/check_aircraft.c \
$(top_srcdir)/libxpcockpit/dictionary.c \
$(top_srcdir)/libxpcockpit/handleserver.c \
$(top_srcdir)/libxpcockpit/iniparser.c \
$(top_srcdir)/libxpcockpit/serverdata.c \
$(top_srcdir)/libxpcockpit/wxrdata.c \
$(top_srcdir)/libxpcockpit/xplanebeacon.c \
$(top_srcdir)/libxpcockpit/xplanewxr.c

noinst_HEADERS = \
CircleEvaluator.h \
FLTKRenderWindow.h \
Font.h \
FontManager.h \
GLHeaders.h \
Gauge.h \
GaugeComponent.h \
Messages.h \
Object.h \
OrderedPair.h \
RenderObject.h \
RenderWindow.h
