# Library name
noinst_LIBRARIES = libRadarBase.a
AM_CPPFLAGS += -I$(top_srcdir)/lib

# Source file names
libRadarBase_a_SOURCES = \
$(top_srcdir)/lib/check_aircraft.c \
$(top_srcdir)/lib/dictionary.c \
$(top_srcdir)/lib/handleserver.c \
$(top_srcdir)/lib/iniparser.c \
$(top_srcdir)/lib/serverdata.c \
$(top_srcdir)/lib/wxrdata.c \
$(top_srcdir)/lib/xplanebeacon.c \
$(top_srcdir)/lib/xplanewxr.c \
CircleEvaluator.cpp \
FLTKRenderWindow.cpp \
Font.cpp \
FontManager.cpp \
Gauge.cpp \
GaugeComponent.cpp \
Object.cpp \
OrderedPair.cpp \
RenderObject.cpp \
RenderWindow.cpp

noinst_HEADERS = \
CircleEvaluator.h \
FLTKRenderWindow.h \
Font.h \
FontManager.h \
GLHeaders.h \
Gauge.h \
GaugeComponent.h \
Messages.h \
Object.h \
OrderedPair.h \
RenderObject.h \
RenderWindow.h
