noinst_LIBRARIES = libRadarDataSources.a
AM_CPPFLAGS += -I$(top_srcdir)/lib

libRadarDataSources_a_SOURCES = \
$(top_srcdir)/lib/check_aircraft.c \
$(top_srcdir)/lib/dictionary.c \
$(top_srcdir)/lib/handleserver.c \
$(top_srcdir)/lib/iniparser.c \
$(top_srcdir)/lib/serverdata.c \
$(top_srcdir)/lib/wxrdata.c \
$(top_srcdir)/lib/xplanebeacon.c \
$(top_srcdir)/lib/xplanewxr.c \
DataSource.cpp \
XPlaneDataSource.cpp

noinst_HEADERS = \
DataSource.h \
XPlaneDataSource.h
