# Library name
noinst_LIBRARIES = libRadarGauges.a

# Source file names
libRadarGauges_a_SOURCES = \
WXR/WXR.cpp \
WXR/DrawWXR.cpp \
WXR/DrawWXRInfo.cpp \
Dummy/DummyGauge.cpp \
../libxpcockpit/check_aircraft.c \
../libxpcockpit/dictionary.c \
../libxpcockpit/handleserver.c \
../libxpcockpit/iniparser.c \
../libxpcockpit/serverdata.c \
../libxpcockpit/wxrdata.c \
../libxpcockpit/xplanebeacon.c \
../libxpcockpit/xplanewxr.c

noinst_HEADERS = \
WXR/WXR.h \
WXR/DrawWXR.h \
WXR/DrawWXRInfo.h \
Dummy/DummyGauge.h
